feat: enhance customer management with walk-in creation, detailed profiles, and measurement handling